--- a/tp-mvc/naze-cpp/CMakeLists.txt
+++ b/tp-mvc/naze-cpp/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required( VERSION 3.0 )
 project( naze )
 
 include_directories( src )
-add_library( naze src/Board.cpp )
+add_library( naze src/Board.cpp src/View.cc )
 
 find_package( PkgConfig REQUIRED )
 pkg_check_modules( PKG_SDL2 REQUIRED sdl2 SDL2_gfx )
@@ -19,6 +19,7 @@ install( TARGETS naze-gui naze-cli DESTINATION bin )
 
 add_executable( naze-test
     test/Board-test.cpp
+    test/View-test.cc
     test/main.cpp )
 target_link_libraries( naze-test naze )
 enable_testing()
